--- a/Product_Services/src/main/resources/application.properties
+++ b/Product_Services/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# Set the application name
 spring.application.name=Product_Services
+
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://root:password@localhost:27017/admin
+
+
+
+
