--- a/order-services/src/main/resources/application.properties
+++ b/order-services/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=order-services
+spring.datasource.url=jdbc:mysql://localhost:3306/test_db
+spring.datasource.username=root
+spring.datasource.password=Pankaj123@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+server.port=8081
